# stack4

./: CMakeLists.txt  README.md
examples/: empty.cpp  init.cpp  push.cpp
include/: stack.hpp
sources/: main.cpp  test.cpp
tests/: catch.hpp  test.cpp
